<resources>
    <string name="app_name" translatable="false">Billie Eilish</string>
    <string name="not_watched">Not Watched</string>
    <string name="i_am_watching">Watching Now!</string>
    <string name="list_add">Add to List</string>
    <string name="add_to_history">Add to History</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_details">Add Details</string>
    <string name="mark_as_watched">Mark as Watched</string>
    <string name="progress">Progress</string>
    <string name="collection">Collection</string>
    <string name="history">History</string>
    <string name="in_collection">Collected</string>
    <string name="in_history">Watched</string>
    <string name="rated_at">Rated at</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="select_time">Select Time</string>
    <string name="public_list">Public</string>
    <string name="last_watched">Last Watched: %1$s</string>
    <string name="collected">Collected</string>
    <string name="episode_title_format">%1$s (S:%2$d E:%3$d %4$s)</string>
    <string name="start_date2">Start date:</string>
    <string name="fetching_data">Fetching data…</string>
    <string name="select_options">Select Options</string>
    <string name="movie_collection">Movie Collection</string>
    <string name="show_collection">Show Collection</string>
    <string name="movie_watched">Movie Watched</string>
    <string name="show_watched">Show Watched</string>
    <string name="list_items">List Items</string>
    <string name="fetching_movie_collection">Fetching Movie Collection…</string>
    <string name="fetching_show_collection">Fetching Show Collection…</string>
    <string name="fetching_movie_watched">Fetching Movie Watched…</string>
    <string name="fetching_show_watched">Fetching Show Watched…</string>
    <string name="fetching_history">Fetching History…</string>
    <string name="fetching_rating">Fetching Rating…</string>
    <string name="fetching_watchlist">Fetching Watchlist…</string>
    <string name="fetching_favorite">Fetching Favorite…</string>
    <string name="fetching_lists">Fetching Lists…</string>
    <string name="fetching_list_items">Fetching List Items…</string>
    <string name="fetching_tmdb_data">Fetching TMDB data…</string>
    <string name="episode">Episode</string>
    <string name="show">Show</string>
    <string name="season1">Season</string>
    <string name="hide_the_account_tab_tkt">Hide the \'Account (TRAKT)\' tab</string>
    <string name="search_people">Search People</string>
    <string name="search_movies">Search movies…</string>
    <string name="search_series">Search shows…</string>
    <string name="search_saved">Search saved…</string>
    <string name="error_loading_data">Error</string>
    <string name="season_p">Season %1$d</string>
    <string name="media_details_not_found">Media details not found</string>
    <string name="disable_month">Disable Month</string>
    <string name="select_a_time">Select a time</string>
    <string name="failed_to_sync">Failed to sync %1$s</string>
    <string name="success">Success</string>
    <string name="no">No</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="remove_from_collection_confirmation">Are you sure you want to remove this item from your collection?</string>
    <string name="yes">Yes</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="remove_from_history">Remove from history</string>
    <string name="remove_from_history_confirmation">Are you sure you want to remove this item from your history?</string>
    <string name="season_episode_p">S:%1$d E:%2$d %3$s</string>
    <string name="episode_p">Episode %1$d</string>
    <string name="episode_s">Episode %1$d(S: %2$d)</string>
    <string name="account_swap">Change sync provider</string>
    <string name="failed_to_get_trakt_access">Failed to get Trakt access</string>
    <string name="please_log_in_again_for_trakt">Please log in again to continue using Trakt features</string>
    <string name="general_notifications">General Notifications</string>
    <string name="ep_progress_text">%1$d/%2$d (%3$d left)</string>
    <string name="stats">Stats</string>
    <string name="movies_collected">Movie Collected</string>
    <string name="time_spent">Time Spent</string>
    <string name="imdb" translatable="false">IMDb: %1$s</string>
    <string name="r_tomatoes" translatable="false">R. Tomatoes: %1$s</string>
    <string name="metacritic" translatable="false">Metacritic: %1$s</string>
    <string name="omdb_api_key">OMDB api key</string>
    <string name="omdb_api_key_summary">Set the OMDB api key to display external ratings data</string>
    <string name="born_date_place">Born on %1$s in %2$s</string>
    <string name="born_date">Born on %1$s</string>
    <string name="born_place">Born in %1$s</string>
    <string name="choose_date_type">Choose Date Type</string>
    <string name="sync_provider">Sync Provider</string>
    <string name="text_tkt_credits">This app uses the Trakt API but is not endorsed or certified by Trakt</string>
    <string name="select_default_sync_provider">Select the default sync provider</string>
    <string name="sync_provider2">Sync provider</string>
    <string name="sync_provider_summary_1">Choose your preferred sync provider. You can update this selection later in the settings.</string>
    <string name="sync_local_summary">Data is stored locally. The database can be exported as file and backup to Google Drive also available.</string>
    <string name="sync_trakt_summary">Watchlist, Watch history, Lists, Favorites, Collection, and Ratings are synced with Trakt.</string>
    <string name="sync_tmdb_summary">Watchlist, Lists, Favorites, and Ratings are synced with TMDB</string>
    <string name="sync_provider_summary_2">TMDB serves as the primary data source, and its data is used for synchronization with both TMDB and Trakt. If you choose to use Trakt or TMDB as a sync provider, you must connect your respective account. No account is required for local database.</string>
    <string name="force_local_sync">Enable local sync even if another provider is selected</string>
    <string name="minimal_tkt_sync_desc">This is a streamlined and hassle-free system for syncing data with Trakt. Only entries marked as \"Watched\" in the \"Saved\" section (Movies and Shows) will be synced. If an \"End Watched\" date is provided, it will be used as the watched date.  \n\nThis is a one-way sync, meaning data will be sent to Trakt but not retrieved from it. To access your Trakt account data, visit the \"Account\" tab.  \n\nFor a minimal sync experience, you can set the default sync provider to \"Local\" and enable this auto-sync method. Once enabled, your data will automatically sync with Trakt daily.</string>
    <string name="sync_with_trakt">Sync with Trakt</string>
    <string name="auto_tkt_des1"> \u24d8 Recommended for users seeking a simplified sync option without full Trakt integration.</string>
    <string name="auto_sync">Auto sync</string>
    <string name="latest">Latest</string>
    <string name="watching_now">WATCHING NOW</string>
    <string name="gen_error_msg">Something went wrong</string>
    <string name="fetching_upcoming">Fetching upcoming movie &amp; shows…</string>
    <string name="mark_as_watched_l">Watched (Local)</string>
    <string name="mark_as_watched_t">Watched (Trakt)</string>
    <string name="mark_as_un_watched_l">Unwatched (Local)</string>
    <string name="mark_as_un_watched_t">Unwatched (Trakt)</string>
    <string name="mark_as">Mark as</string>
    <string name="get_tkt_data">Auto fetch \"Trakt\" data</string>
    <string name="get_tkt_data_summary">Get complete account data from \"Trakt\" automatically once a week</string>
    <string name="cancel_sync">Cancel Sync</string>
    <string name="fetching_trakt_data">Fetching Trakt data…</string>
    <string name="fetching_tmdb_data1">Fetching TMDB data…</string>
    <string name="sync_completed">Sync completed</string>
    <string name="auto_fetch">Automated data sync</string>
    <string name="quick_access">Quick Access</string>
    <string name="trakt_login_required">Login to Trakt to enable auto-fetch</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="all">All</string>
    <string name="no_upcoming_content">No upcoming content found</string>
    <string name="no_upcoming_shows">No upcoming shows or movies to display.</string>
    <string name="upcoming_text">Upcoming on %1$s, Season %2$s, Episode %3$s</string>
    <string name="sync_provider_caution">\u26a0 If multiple provider is enabled, it may not be easier to differentiate between the input methods of all provider, so use with caution.</string>
    <string name="trakt_login_required_1">Log In - Trakt</string>
    <string name="omdb_api_key1">OMDB API Key</string>
    <string name="omdb_api_desc_1">To display ratings from IMDb, Rotten Tomatoes, and Metacritic, you need to enter your OMDB API key. This API key is used to fetch external ratings data.</string>
    <string name="omdb_api_desc2">OMDB API has a free tier for personal use. To get your free API key, follow these steps:</string>
    <string name="omdb_api_desc3">1. Go to the OMDB website: https://www.omdbapi.com/\n2. Click on \'API key\' in the navigation menu.\n3. Sign up for a free account.\n4. Once signed up, your API key will be sent to your email.</string>
    <string name="omdb_api_desc_4">You can also enter your OMDB API key later in the settings.</string>
    <string name="api_key">API Key</string>
    <string name="dont_show_this_dialog_again">Don\'t show this dialog again.</string>
    <string name="quick_access_with_long_click">Quick Access with Long Click</string>
    <string name="quick_access_desc1">Discover quick actions for your shows by using a long click on the \'Show\' item. This provides instant access to seasons and episodes you need to watch.</string>
    <string name="when_watching_a_show">When Watching a Show:</string>
    <string name="quick_access_desc2">Long click the \'Show\' to instantly jump to the next episode you need to watch. This is the fastest way to continue watching your favorite series.</string>
    <string name="tap_anywhere_outside_this_sheet_to_dismiss">Tap anywhere outside this sheet to dismiss.</string>
    <string name="get_tmdb_progress_data">Get Episode Data</string>
    <string name="fetching_episode_data">Fetching episode data…</string>
    <string name="fetching_show_data">Fetching… %s</string>
    <string name="fetching_item_of">Fetching item %1$d of %2$d</string>
    <string name="source_code">Source Code</string>
    <string name="license">License</string>
    <string name="author_wirelessalien" translatable="false">Author: Abhilash</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="favorites">Favorites</string>
    <string name="watchlist">Watchlist</string>
    <string name="user_profile">User Profile</string>
    <string name="tv_shows">Shows</string>
    <string name="video_player">Video Player</string>
    <string name="video_not_available">Video not available</string>
    <string name="loading_video">Loading video...</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_message">Discover the world of movies and TV shows</string>
    <string name="login_description">Sign in to get a personalized experience tailored for you</string>
    <string name="login_footer">By signing in, you agree to our Terms of Service and Privacy Policy</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="skip_login">Skip</string>
    <string name="statistics">Statistics</string>
    <string name="movies">Movies</string>
</resources>